<resources>
    <string name="app_name">Task_06</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
</resources>